cyclonedx-bom-macros/tests/ui/fail/struct.stderr
error: cannot parse module: expected `mod` while using the `#[versioned]` macro
 --> tests/ui/fail/struct.rs:4:1
  |
4 | struct Foo;
  | ^^^^^^
